k3s/Ingress/simple-rest-golang-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-rest-golang-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: tcp
  selector:
    app: simple-rest-golang
